# SUPAASP

./: .gitignore  README.md
post_processing/: data_reading_and_plotting.py
src/: CMakeLists.txt  Makefile  calc_routines.cpp  calc_routines.h  calc_routines_kokkos.cpp  calc_routines_kokkos.h  files.cpp  files.h  gdb_run.txt  main.cpp
src_written_data/: INFO.txt  Laptop_Times.txt
